# TimeOptimizer

./: CMakeLists.txt  README.md  acc.txt  draw.py  pos.txt  time.txt  traj.json  vel.txt
launch/: clean_demo.launch  time_optimizer.launch
launch/rviz_config/: simulation.rviz  time_optimizer.rviz
src/: bezier_base.cpp  bezier_base.h  demo.cpp  time_optimizer.cpp  time_optimizer.h  trajectory_generator_waypoint.cpp  trajectory_generator_waypoint.h
time_optimizer/: CMakeLists.txt  README.md  acc.txt  package.xml  pos.txt  time.txt  vel.txt
time_optimizer/launch/: clean_demo.launch  inte_demo.launch
time_optimizer/launch/rviz_config/: time_optimizer.rviz
time_optimizer/src/: demo.cpp  timeAllocator.h  time_optimizer.cpp  time_optimizer.h  traj_poly_mono.h  trajectory_base.h  trajectory_generator_waypoint.h
utils/rviz_plugins/: CMakeLists.txt  package.xml
utils/waypoint_generator/src/: waypoint_generator.cpp
